--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
 
 <head>
-Lay Kuan Loh
+<h2> Lay Kuan Loh </h2>
 </head>
 
 <body>
-<a href="./project1/index.html"> CS142 Project 1</a>
+Coding up projects inspired by <a href="http://web.stanford.edu/class/cs142/projects.html">CS 142</a> here: 
+<ul>
+	<li><a href="./project1/index.html"> CS142 Project 1</a></li>
+</ul>
 </body>
 
 </html>
