--- a/index.html
+++ b/index.html
@@ -1,14 +1,243 @@
-<html>
 
-<head>
-<h2> Lay Kuan Loh </h2>
-</head>
 
-<body>
-Coding up projects inspired by <a href="http://web.stanford.edu/class/cs142/projects.html">CS 142</a> here: 
-<ul>
-	<li><a href="./project1/index.html"> CS142 Project 1</a></li>
-</ul>
-</body>
+<!DOCTYPE html>
+<!-- ssh lloh@ece007.ece.cmu.edu -->
+<!-- ch into dir where files are kept -->
+<!-- scp -r * lloh@ece007.ece.cmu.edu:/afs/ece.cmu.edu/usr/lloh/public_html-->
+<html lang="en-US">
+  <!-- =============================================================== -->
 
-</html>
+  <head>
+    <title>
+      Lay Kuan Loh 
+    </title>
+    <meta name="description" content="Graduate student in Electrical and Computer Engineering at Carnegie Mellon University"/>
+    <link rel="stylesheet" type="text/css" href="./styles.css"/>
+  </head>
+
+  <!-- =============================================================== -->
+  
+  <body>
+    <header class="header">
+      <h2>  
+        Lay Kuan Loh 
+        <div class='py'>&#32599;&#33673;&#38055;</div> 
+      </h2>
+      <div> Carnegie Mellon University </div>
+      <div> CIC 2221E </div>
+      <div> lloh{at}andrew.cmu.edu </div>
+      <hr> 
+      <div id="resume"> 
+        <a href="./files/lkloh_resume.pdf">Resume</a>
+        <!-- <a href="./files/lkloh_cv.pdf">Curriculum Vitae (detailed)</a> -->
+      </div>
+      <hr>
+    <header/>
+
+    <!-- =============================================================== -->
+
+    <div id="main" class="screen">
+
+      <img src="./files/fruitmarket.jpg" alt="Lay Kuan Loh" height="400"/>
+
+      <p>
+        I am a graduate student in the <a href="https://www.ece.cmu.edu/"> Electrical and Computer Engineering</a> department at <a href="http://www.cmu.edu/index.shtml"> Carnegie Mellon University</a>, working on network verification with Professor <a href="https://www.andrew.cmu.edu/user/liminjia/">Limin Jia</a>. Here are my <a href="https://github.com/lkloh">Github</a> and my <a href="https://www.linkedin.com/pub/lay-kuan-loh/23/31a/b59">LinkedIn</a> profiles.
+        I'm part of the CyLab Social Engineering Committee, which organizes social events for members of the <a href="https://www.cylab.cmu.edu/">CyLab</a> community several times a year. Previously, I studied math and computer science at <a href="http://www.stanford.edu/">Stanford University</a>, where I was the treasurer for the <a href="http://web.stanford.edu/group/sas/">Singaporeans at Stanford</a> Society. 
+      </p>
+      <hr>
+
+      <!-- =============================================================== -->
+
+      <p>
+        <h3> Publications </h3>
+
+        <div class="info">
+        <b>Distributed Provenance Compression.</b>
+        Chen Chen, Harshal Lehri, Lay Kuan Loh, Anupam Alur, Limin Jia, Wenchao Zhou and Boon Thau Loo.
+        <i>To appear in <a href='http://sigmod2017.org/'>SIGMOD/PODS 2017</a>.</i>
+        </div>
+
+        <div class="info">
+        <a href="http://www.ieee-security.org/TC/SP2016/program-posters.html"><b>Poster: Evaluating the effectiveness of privacy tools using Information Flow Experiments.</b></a>
+        Amit Datta, Anupam Datta, Lay Kuan Loh, Michael Carl Tschantz and Zheng Zong.
+        <i><a href='http://www.ieee-security.org/TC/SP2016/program-posters.html'>37th IEEE Symposium on Security and Privacy</a></i>
+        <ul> 
+          <li><a href='./infoflow2016/PET-poster-2016.pdf'>Abstract</a>
+          <li><a href='./infoflow2016/Oakland-PETEvaluation.pdf'>Poster</a>
+        </ul>
+        </div>
+
+        <div class="info">
+          <a href="http://link.springer.com/chapter/10.1007%2F978-94-6300-163-2_11"><b>Affordances in School Science Research: Narratives from Two Singapore Specialized Science School Students.</b></a>
+          Tang Wee Teo, Jia Qian Woo, Lay Kuan Loh.
+          <i>Interplay of Creativity and Giftedness in Science. SensePublishers, 2016. 203-217.</i>
+        </div>
+
+        <div class="info">
+        <a href="http://dl.acm.org/citation.cfm?id=2790516"><b>Automated Verification of Safety Properties in Declarative Networking Programs.</b></a>
+        Chen Chen, Lay Kuan Loh, Limin Jia, Wenchao Zhou and Boon Thau Loo.
+        <i><a href='http://costa.ls.fi.upm.es/ppdp15/'>17th International Symposium on Principles and Practice of Declarative Programming (PPDP)</a>, July 2015.</i>
+        <ul> 
+          <li><a href='http://dl.acm.org/citation.cfm?id=2790516'>Conference Paper</a>
+          <li><a href='./ppdp2015/ConferenceSlides.pdf'>Slides for Conference Talk</a>
+          <li><a href='https://www.cylab.cmu.edu/research/techreports/2015/tr_cylab15002.html'>Technical Report</a></i>
+          <li><a href='./ppdp2015/ppdp_poster.pdf'>Poster</a></li>
+        </ul>
+        </div>
+
+      </p>
+      <hr>
+
+      <!-- =============================================================== -->
+
+      <p>
+        <h3> Coursework </h3>
+
+        <div id="class">
+          <span class='year'>Spring 2017</span>
+          <a href="http://www.cs.cmu.edu/~aldrich/courses/17-355-17sp/">17-665: Program Analysis</a>
+        </div>
+        <div id="class">
+          <span class='year'></span>
+          <a href="http://www.cs.cmu.edu/~terrylee/">08-671: Java for Application Programmers</a>
+        </div>
+        <div id="class">
+          <span class='year'></span>
+          <a href="http://www.cs.cmu.edu/~cprose/MachineLearningInPracticeSyllabus-S16.pdf">11-663: Applied Machine Learning </a>
+        </div>
+
+        <div id="class">
+          <span class='year'>Spring 2016</span>
+          <a href="https://www.ece.cmu.edu/~ece732/">18-732: Secure Software Systems</a>
+        </div>
+        <div id="class">
+          <span class='year'></span>
+          <a href="http://www.cs.cmu.edu/~15811/">18-739M: Special Topics: Formal Foundations of Software Security</a>
+        </div>
+        <div id="class">
+          <span class='year'></span>
+          <a href="https://www.ece.cmu.edu/courses/items/18701.html">18-701: Technical Writing for Engineers - Linguistic Foundations</a>
+        </div>
+        <div id="class">
+          <span class='year'></span>
+          <a href="https://www.ece.cmu.edu/courses/items/18702.html">18-702: Technical Writing for Engineers - Genre Foundations</a>
+        </div>
+
+        <div id="class">
+          <span class='year'>Fall 2015</span>
+          <a href="https://www.ece.cmu.edu/~ece734/">18-734: Foundations of Privacy</a>
+        </div>
+        <div id="class">
+          <span class='year'></span>
+          <a href="https://www.cs.cmu.edu/~rwh/courses/typesys/">15-814: Types and Programming Languages</a>
+        </div>
+        <div id="class">
+          <span class='year'></span>
+          <a href="http://www.cs.cmu.edu/afs/cs/project/pscico-guyb/realworld/www/indexF15.html">15-853: Algorithms in the "Real World"</a>
+        </div>
+
+        <div id="class">
+          <span class='year'>Spring 2015</span>
+          <a href="http://symbolaris.com/course/pls15.html">15-812: Programming Language Semantics</a>
+        </div>
+        <div id="class">
+          <span class='year'></span>
+          <a href="https://leanprover.github.io/cmu-15815-s15/">15-815: Interactive Theorem Proving</a>
+        </div>
+
+        <div id="class">
+          <span class='year'> Fall 2014 </span>
+          <a href="https://www.ece.cmu.edu/courses/items/18730.html">18-730: Introduction to Computer Security</a>
+        </div>
+        <div id="class">
+          <span class='year'></span>
+          <a href="http://users.ece.cmu.edu/~pgrover/teaching/networks.html">18-859E: Special Topics in Communications</a>
+        </div>
+
+
+      </p>
+      <hr>
+
+      <!-- =============================================================== -->
+
+      <p>
+        <h3> Teaching Assistant </h3>
+
+        <div id="ta">
+          <span class='year'> Fall 2016 </span>
+          <span id='ta-type'><a href="https://www.ece.cmu.edu/~ece734/"> 18-734/08-604: Foundations of Privacy </a></span>
+        </div>
+        <div id="ta">
+          <span class='year'> Fall 2015 </span>
+          <span id='ta-type'><a href="http://users.ece.cmu.edu/~liminjia/18631/F15/schedule-F15.pdf"> 14-741/18-631: Introduction to Information Security</a></span>
+        </div>
+      </p>
+      <hr>
+
+      <!-- =============================================================== -->
+
+      <p>
+        <h3> Presentations </h3>
+
+        <div class="workshops">
+          <a href="http://www.industry-academia.org/event-carnegie-mellon-cloud-workshop.html">Carnegie Mellon Cloud Workshop</a>
+        <div>
+        <div class="workshops">
+          <a href="http://www.research.att.com/conferences/2016_Academic_Summit/index.html?fbid=UX-FPlyl3y9">AT&amp;T Research Academic Summit 2016</a>
+        <div>
+        <div class="workshops">
+          <a href="http://costa.ls.fi.upm.es/ppdp15/">PPDP 2015</a>
+        <div>
+      <p>
+      <hr>
+
+      <!-- =============================================================== -->
+
+      <p>
+        <h3> Awards and Scholarships </h3>
+
+        <div id="awards">
+          <span class='year'> January 2017 </span>
+          <span id='award-type'><a href="http://popl17.sigplan.org/track/PLMW-2017">Programming Languages Mentoring Workshop</a> Scholarship </span> 
+        </div>
+        <div id="awards">
+          <span class='year'> October 2016 </span>
+          <span id='award-type'><a href="https://www.ece.cmu.edu/">ECE</a> Grace Hopper Essay Contest: Winner </span> 
+        </div>
+        <div id="awards">
+          <span class='year'> May 2015 </span>
+          <span id='award-type'><a href="http://fm.csl.sri.com/SSFT15/">Fifth Summer School on Formal Techniques</a></span> 
+        </div>
+        <div id="awards">
+          <span class='year'> April 2015 </span>
+          <span id='award-type'><a href="http://cra.org/cra-w/events/grad-cohort-workshop-2015/">Grad Cohort Workshop 2015</a></span> 
+        </div>
+        <div id="awards">
+          <span class='year'> Fall 2014 - Spring 2015 </span>
+          <span id='award-type'><a href='https://engineering.cmu.edu/index.html'>Carnegie Institute of Technology</a> Dean's Tuition Fellowship</span> 
+        </div>
+        <div id="awards">
+          <span class='year'> Summer 2012 </span>
+          <span id='award-type'><a href='https://earth.stanford.edu/ere/past-fellows-2012'>Stanford Summer Undergraduate Research Program</a></span> 
+        </div>
+      </p>
+      <hr>
+
+      <!-- =============================================================== -->
+
+      <img src="./files/autumn.jpg" alt="museum" height="500"/>
+
+      <!-- =============================================================== -->
+
+      <p> 
+        <i> Last Updated: January 2017 </i>
+      </p>
+
+      <!-- =============================================================== -->
+
+    </div>
+  </body>
+</html> 
+
+
+
