fun facts added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </title>
     <meta name="description" content="Graduate student in Electrical and Computer Engineering at Carnegie Mellon University"/>
     <link rel="stylesheet" type="text/css" href="./styles.css"/>
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Rancho">
   </head>
 
   <!-- =============================================================== -->
@@ -196,36 +197,68 @@
       <p>
         <h3> Awards and Scholarships </h3>
 
-        <div id="awards">
+        <div class="awards">
           <span class='year'> January 2017 </span>
           <span id='award-type'><a href="http://popl17.sigplan.org/track/PLMW-2017">Programming Languages Mentoring Workshop</a> Scholarship </span> 
         </div>
-        <div id="awards">
+        <div class="awards">
           <span class='year'> October 2016 </span>
           <span id='award-type'><a href="https://www.ece.cmu.edu/">ECE</a> Grace Hopper Essay Contest: Winner </span> 
         </div>
-        <div id="awards">
+        <div class="awards">
           <span class='year'> May 2015 </span>
           <span id='award-type'><a href="http://fm.csl.sri.com/SSFT15/">Fifth Summer School on Formal Techniques</a></span> 
         </div>
-        <div id="awards">
+        <div class="awards">
           <span class='year'> April 2015 </span>
           <span id='award-type'><a href="http://cra.org/cra-w/events/grad-cohort-workshop-2015/">Grad Cohort Workshop 2015</a></span> 
         </div>
-        <div id="awards">
+        <div class="awards">
           <span class='year'> Fall 2014 - Spring 2015 </span>
           <span id='award-type'><a href='https://engineering.cmu.edu/index.html'>Carnegie Institute of Technology</a> Dean's Tuition Fellowship</span> 
         </div>
-        <div id="awards">
+        <div class="awards">
           <span class='year'> Summer 2012 </span>
           <span id='award-type'><a href='https://earth.stanford.edu/ere/past-fellows-2012'>Stanford Summer Undergraduate Research Program</a></span> 
         </div>
       </p>
+
       <hr>
 
       <!-- =============================================================== -->
 
       <img src="./files/autumn.jpg" alt="museum" height="500"/>
+
+      <!-- =============================================================== -->
+
+      <p>
+        <h3 class="fun-facts"> Fun Facts </h3>
+
+        <ul class="fun-facts">
+          <li> 
+            It took me <span class="italic">six</span> 
+            tries in three different states to get licensed to drive. 
+            Afterwards, I successfully trained two of my friends to 
+            obtain their license in Pennsylvania. 
+            Each obtained it within two attempts. 
+          </li>
+          <li>
+            My mother's maiden name is "Na". 
+            (No, that's not the answer to any of my security questions.)
+            Once when I was filling in parental information on a form, 
+            I was chided for stating that her surname was 
+            <span class="italic">Not Applicable</span>. 
+          </li>
+          <li>
+            In college, I rented a room from a landlady who insisted that I
+            clean the bathroom after <span class="italic">every</span> use. 
+            I moved out after four days.
+            Every roommate I've lived with since then was impressed
+            to see me clean once a week.
+          </li>
+        </ul> 
+      </p>
+      <hr>
 
       <!-- =============================================================== -->
 
