--- a/index.html
+++ b/index.html
@@ -246,15 +246,15 @@
             My mother's maiden name is "Na". 
             (No, that's not the answer to any of my security questions.)
             Once when I was filling in parental information on a form, 
-            I was chided for stating that her surname was 
+            I was chided for stating that her maiden name was 
             <span class="italic">Not Applicable</span>. 
           </li>
           <li>
             In college, I rented a room from a landlady who insisted that I
-            clean the bathroom after <span class="italic">every</span> use. 
+            clean the bathroom <span class="italic">every</span> time I used it. 
             I moved out after four days.
-            Every roommate I've lived with since then was impressed
-            to see me clean once a week.
+            Since then, all my roommates have been impressed
+            by my habit of cleaning once a week without fail. 
           </li>
         </ul> 
       </p>
