--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             clean the bathroom <span class="italic">every</span> time I used it. 
             I moved out after four days.
             Since then, all my roommates have been impressed
-            by my habit of cleaning once a week without fail. 
+            to see me clean every week.
           </li>
         </ul> 
       </p>
