--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 {% for post in paginator.posts %}
   <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
   <p class="author">
-    <span class="date">{{ post.date.strftime(%Y-%m-%d) }}</span>
+    <span class="date">{{ post.date }}</span>
   </p>
   <div class="content">
     {{ post.content }}
